[gd_scene load_steps=4 format=3 uid="uid://6m1jpqpke4bn"]

[ext_resource type="Script" uid="uid://c0ipkj1l3k5ww" path="res://scripts/level_complete_screen.gd" id="1_mcvgn"]
[ext_resource type="Texture2D" uid="uid://cl8iicnixdovg" path="res://assets/Menu/background.jpg" id="2_du5ev"]
[ext_resource type="AudioStream" uid="uid://vgv1i3tdtdf" path="res://scripts/Victory.mp3" id="3_mcvgn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mcvgn")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_du5ev")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = 23.0
offset_right = 166.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="NextBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Levels"

[node name="RetryBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Retry"

[node name="MenuBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 29
text = "YOU WIN"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mcvgn")
autoplay = true

[connection signal="pressed" from="HBoxContainer/NextBtn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/MenuBtn" to="." method="_on_menu_btn_pressed"]
